--- a/public/style.css
+++ b/public/style.css
@@ -171,6 +171,7 @@ body {
   width: 32px;
   height: 32px;
   margin-right: 10px;
+  border-radius: 50%;
 }
 
 .post .usuario,
@@ -210,6 +211,7 @@ body {
   width: 20px;
   height: 20px;
   margin-right: 10px;
+  border-radius: 50%;
 }
 
 .post:last-child {
